# rbg

./: .gitignore  ONEPAGER.md  README.md  pyproject.toml
rbg/: __init__.py  audit.py  cli.py  report.py
rbg/checks/: data_quality.py  reproducibility.py  statistics.py
rbg/parsers/: dataset.py  notebook.py
