[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbg"
version = "0.1.0"
description = "Rigorous Baseline Governance — automated scientific paper auditor"
requires-python = ">=3.10"
dependencies = [
    "nbformat>=5.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "click>=8.1",
]

[project.optional-dependencies]
llm = ["anthropic>=0.39"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
rbg = "rbg.cli:main"

[tool.setuptools.packages.find]
include = ["rbg*"]
